fixed left button hover, add z-index

--- a/css/pages/create_bill.css
+++ b/css/pages/create_bill.css
@@ -237,6 +237,7 @@
     border-radius: 50%;
     background-color: rgb(57, 28, 87);
     cursor: pointer;
+    z-index: 2;
 }
 
 .bill_view_next_btn{
@@ -248,7 +249,7 @@
 }
 
 .bill_view_next_btn:hover,
-.bill_view_next_btn:hover{
+.bill_view_prev_btn:hover{
     background-color: rgb(83, 41, 128);
 }
 
